--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,16 @@
 steps:
   - id: 'build'
-    name: 'earthly/earthly:v0.5.24'
+    name: 'earthly/earthly:v0.7.23'
+    env:
+      - "HOME=/root"
     args:
       - --allow-privileged
       - +docker
   
   - id: 'gcp-test'
-    name: 'earthly/earthly:v0.5.24'
+    name: 'earthly/earthly:v0.7.23'
+    env:
+      - "HOME=/root"
     args:
       - +gcp-cloudbuild
     secretEnv:
