Update earthly project

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,6 +11,7 @@ steps:
     name: 'earthly/earthly:v0.7.23'
     env:
       - "HOME=/root"
+      - "EARTHLY_PROJECT=cloud"
     args:
       - +gcp-cloudbuild
     secretEnv:
